Route logging through the Logger service, and consolidate onto one Postgres and one Redis (#7)
* Log the auth local-database notice through the shared Logger bean

The "using local database" line was the one place the auth server built its
own sink: it ran as an AppServer beforeRun hook, before SpringApplication.run(),
so no Logger bean existed yet and it constructed a CustomLogger by hand. That
put the message in a different file and format from every other line the server
emits, and it ignored any Logger bean override.

The message does not need to precede context startup, so move it into an
ApplicationRunner that takes the injected Logger. It now lands in
logs/auth-server.jsonl with the rest, and swapping the sink for the whole app is
one bean declaration again.

Auth was the only user of the beforeRun hook, so drop that plumbing from
AppServer and SpringServerBootstrap along with it.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* Route all logging through the Logger service and push to Loki

Replace raw System.out/System.err with an injected dev.orwell.logging.Logger
everywhere, so the sink behind any call site can be swapped without touching the
call site. ~72 call sites across 15 modules.

Foundation (packages/logger):
- Logger gains default info/warn/error/debug/trace overloads and stays a
  @FunctionalInterface, so a test double is a lambda.
- New sinks: ConsoleLogger (stdout, WARN/ERROR to stderr), JsonLogger (JSON
  lines), CompositeLogger (fan-out), FailSafeLogger (contains sink failures),
  LokiLogger (async batched push).
- LogFormatter and LogEntryJson give the text and JSON representations one
  renderer each, so sinks cannot drift apart.
- LogEntry accepted null metadata values by contract but rejected them via
  Map.copyOf, so every logger.error("...", {"error": exception.getMessage()})
  threw NPE from inside the caller's catch block. Now copies into a
  LinkedHashMap.
- CustomLogger silently discarded metadata and wrote n